# doppelgamer

./: Cargo.toml  README.md  games.json  games.v2.json
.github/workflows/: release.yml  update-games.yml
scripts/: update-games.py
src/: main.rs
