[package]
name = "doppelgamer"
version = "0.6.0"
edition = "2024"
default-run = "doppelgamer"

[lints]
clippy.all = "warn"
clippy.pedantic = "warn"
clippy.nursery = "warn"
clippy.unwrap_used = "warn"

[dependencies]
anyhow = "1.0.100"
ctrlc = "3.5.1"
eframe = "0.33.3"
etcetera = "0.11.0"
image = { version = "0.25.9", default-features = false, features = ["ico"] }
jiff = "0.2.16"
reqwest = { version = "0.12.26", features = ["json", "blocking"] }
serde = "1.0.228"
serde_json = "1.0.145"
