[package]
name = "doppelgamer"
version = "0.7.1"
edition = "2024"
default-run = "doppelgamer"

[lints]
clippy.all = "warn"
clippy.pedantic = "warn"
clippy.nursery = "warn"
clippy.unwrap_used = "warn"

[dependencies]
anyhow = "1.0.100"
ctrlc = "3.5.1"
eframe = "0.33.3"
etcetera = "0.11.0"
image = { version = "0.25.9", default-features = false, features = ["ico"] }
jiff = "0.2.18"
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
