[package]
name = "doppelgamer"
version = "1.0.2"
edition = "2024"
default-run = "doppelgamer"

[dependencies]
anyhow = "1.0.100"
etcetera = "0.11.0"
iced = { version = "0.14.0", features = ["image", "tokio"] }
iced_aw = "0.13.0"
jiff = "0.2.18"
nucleo = "0.5.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"

[lints]
clippy.all = "warn"
clippy.nursery = "warn"
clippy.pedantic = "warn"
clippy.unwrap_used = "warn"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
